--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ mistralai = "^1.9.9"
 langchain-mistralai = "^0.2.11"
 langchain = "^0.3.27"
 scikit-learn = "^1.7.1"
+jupyter = "^1.1.1"
+ipykernel = "^6.30.1"
 
 
 
