feat: add vector store service chroma db

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,15 @@
-# Load environment variables from .env
+# .envrc
+export POETRY_VIRTUALENVS_IN_PROJECT=true
 dotenv
 
-# Activate Poetry’s virtualenv
-export VIRTUAL_ENV=$(poetry env info -p)
-PATH_add "$VIRTUAL_ENV/bin"
+# Ensure a local venv exists; create on first load if missing
+if [ ! -d ".venv" ]; then
+  poetry env use python3.11 || poetry env use python3
+  poetry install --no-root
+fi
+
+# Activate Poetry’s venv
+export VIRTUAL_ENV="$(poetry env info -p 2>/dev/null || true)"
+if [ -n "$VIRTUAL_ENV" ]; then
+  PATH_add "$VIRTUAL_ENV/bin"
+fi
